Fixed "Previous" link

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2008-11-11 Dmitry Dulepov [netcreators]  <dmitry@typo3.org>
 
 	* TYPO3 4.3 compatibility fix
+	* Fixed "Previous" link
 
 2008-10-31 Dmitry Dulepov [netcreators]  <dmitry@typo3.org>
 
