--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
+2008-11-21 Dmitry Dulepov [netcreators]  <dmitry@typo3.org>
+
+	* Added more parameters to hook (request from Georg Ringer)
+
 2008-11-11 Dmitry Dulepov [netcreators]  <dmitry@typo3.org>
 
 	* TYPO3 4.3 compatibility fix
 	* Fixed "Previous" link
+	* Released version 1.0.1
 
 2008-10-31 Dmitry Dulepov [netcreators]  <dmitry@typo3.org>
 
