--- a/ChangeLog
+++ b/ChangeLog
@@ -1,21 +1,25 @@
-2008-11-21 Dmitry Dulepov [netcreators]  <dmitry@typo3.org>
+2009-02-28  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Added minified version of CSS styles
+
+2008-11-21  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added more parameters to hook (request from Georg Ringer)
 
-2008-11-11 Dmitry Dulepov [netcreators]  <dmitry@typo3.org>
+2008-11-11  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* TYPO3 4.3 compatibility fix
 	* Fixed "Previous" link
 	* Released version 1.0.1
 
-2008-10-31 Dmitry Dulepov [netcreators]  <dmitry@typo3.org>
+2008-10-31  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug: link to next page shown if current page is greater than maximum pages
 
-2008-07-19 Dmitry Dulepov [netcreators]  <dmitry@typo3.org>
+2008-07-19  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug: header data is not added
 
-2008-07-18 Dmitry Dulepov [netcreators]  <dmitry@typo3.org>
+2008-07-18  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* initial code generated with kickstarter
