--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2010-02-02  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>
 
 	* Committed some fixes made for clients
+	* Mark as compatible with TYPO3 4.3
 
 2009-02-28  Dmitry Dulepov  <dmitry@typo3.org>
 
