--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Committed some fixes made for clients
 	* Mark as compatible with TYPO3 4.3
+	* Released version 1.1.0
 
 2009-02-28  Dmitry Dulepov  <dmitry@typo3.org>
 
