--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2010-10-27  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added a new TS setting to force a certain amount of linsk to pages
+	* Released version 1.2.0
 
 2010-02-02  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>
 
