--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
+2010-11-09  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Released version 1.3.0
+
 2010-10-27  Dmitry Dulepov  <dmitry@typo3.org>
 
-	* Added a new TS setting to force a certain amount of linsk to pages
+	* Added a new TS setting to force a certain amount of links to pages
 	* Released version 1.2.0
 
 2010-02-02  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>
