--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-14  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Fixed bug #6351: Plugin element displays 'Data Structure ERROR'
+
 2010-11-09  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Released version 1.3.0
