--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2012-05-14  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #6351: Plugin element displays 'Data Structure ERROR'
+	* Released version 1.3.2
 
 2010-11-09  Dmitry Dulepov  <dmitry@typo3.org>
 
