--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-02-14  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* TYPO3 6.2 compatibility
+
 2013-02-12  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #32093: Usage of deprecated testInt method
