--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2014-02-14  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* TYPO3 6.2 compatibility
+	* Released version 1.3.4
 
 2013-02-12  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
